gradle wrapper add kotlin and a few gradle plugins address forbidden apis and spotless stuff